argocd/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: vaultwarden
spec:
  selector:
    app: server
  ports:
    - port: 80
